# redCedar

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  bindings.cpp  build.sh  main.cpp  nn.cpp  nn.hpp  tensor.cpp  tensor.hpp
test/: test2.py  train_simple.py  train_simple_torch.py
